--- a/InventoryManagementSystems/src/main/resources/application.properties
+++ b/InventoryManagementSystems/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-server.port=8081
+server.port=8080
 
 spring.jpa.database=MYSQL
 
 spring.datasource.url = jdbc:mysql://localhost:3306/demo?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&useSSL=false
 spring.datasource.username = root
-spring.datasource.password = Root
+spring.datasource.password = root
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto = update
