--- a/InventoryManagementSystems/src/main/resources/application.properties
+++ b/InventoryManagementSystems/src/main/resources/application.properties
@@ -7,3 +7,9 @@ spring.datasource.username = root
 spring.datasource.password = root
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto = update
+
+ 
+spring.jpa.properties.hibernate.show_sql=true 
+#spring.jackson.serialization.fail-on-empty-beans=false
+
+spring.jpa.properties.hibernate.format_sql=true
